fixing aspect ratios for images on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -52,6 +52,6 @@
 }
 .project-image img {
   width: auto;
-  height: 350px;
+  max-height: 350px;
   border: 1px solid #888888;
 }
